@startuml BounceBall
class BounceBall
class Game{
    - Menu : menu[1]
    -Audio : audio[1]
}
class Menu
class Player
class Audio{
    -Music : music[2]
}
class Music

Game "1" *-- "1" Menu
Game "1" *-- "1" Audio
Audio "1" *-- "2" Music

Player o-- Game

Game <-- BounceBall 

Game : initGame()
Game : resetGame()
Game : checkCollisions()
Game : createCollectibles()
Game : createObstacles()
Game : initFonts()
Game : initText()
Game : isRunning()
Game : handleEvents()
Game : updateText()
Game : renderText()
Game : update()
Game : render()
Game : resetGoalPosition()
Game : resetGameElements()

Menu : moveUp()
Menu : moveDown()
Menu : getMenuPressed()
Menu : draw()
Menu : initBackgroud()
Menu : initTitle()

Player : initVariables()
Player : initTexture()
Player : initSprite()
Player : initAnimations()
Player : updateAnimatios()
Player : updateInput()
Player : updateWindowBoundCollision()
Player : update()
Player : render()
Player : getBounds()
Player : update()

Music : loadBackgroundMusic()
Music : playBackgroundMusic()
Music : stopBackgroundMusic()

Audio : loadMusic()
Audio : playMusic()
Audio : stopMusic()